# Nodal_Analysis

./: .gitignore  CMakeLists.txt  main.cpp
inc/: Complex_C.h  Complex_P.h  Matrix.h  Nodal_Analysis.h
input/: ACTest.txt  DCTest.txt  experimentDC.txt
src/: Complex_C.cpp  Complex_P.cpp  Nodal_Analysis.cpp
